Fixed a bug with the add card button being squashed when there are too many cards

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -38,5 +38,6 @@
 
   .height-min-content {
     height: min-content;
+    max-height: 100%;
   }
 }
